--- a/data_extension/varInspector/main.css
+++ b/data_extension/varInspector/main.css
@@ -26,6 +26,89 @@
   overflow: hidden;
 }
 
+
+.searchResults1 {
+  max-height: 500px;
+  min-height: 100px;
+  font-size: 80%;
+  padding: 0px;
+  overflow-y: auto;
+  font-weight: normal;
+  color: #333333;
+  white-space: nowrap;
+  overflow-x: auto;
+}
+
+.searchResults1-float-wrapper {
+  position: fixed !important;
+  top: 120px;
+  width:350px;
+  max-width:800px;
+  right: 20px;
+  border: thin solid rgba(0, 0, 0, 0.38);
+  border-radius: 5px;
+  padding:10px;
+  background-color: #fff;
+  opacity: .95;
+  z-index: 100;
+  overflow: hidden;
+}
+
+.searchResults2 {
+  max-height: 500px;
+  min-height: 100px;
+  font-size: 80%;
+  padding: 0px;
+  overflow-y: auto;
+  font-weight: normal;
+  color: #333333;
+  white-space: nowrap;
+  overflow-x: auto;
+}
+
+.searchResults2-float-wrapper {
+  position: fixed !important;
+  top: 120px;
+  width:350px;
+  max-width:800px;
+  right: 20px;
+  border: thin solid rgba(0, 0, 0, 0.38);
+  border-radius: 5px;
+  padding:10px;
+  background-color: #fff;
+  opacity: .95;
+  z-index: 100;
+  overflow: hidden;
+}
+
+.searchResults3 {
+  max-height: 500px;
+  min-height: 100px;
+  font-size: 80%;
+  padding: 0px;
+  overflow-y: auto;
+  font-weight: normal;
+  color: #333333;
+  white-space: nowrap;
+  overflow-x: auto;
+}
+
+.searchResults3-float-wrapper {
+  position: fixed !important;
+  top: 120px;
+  width:350px;
+  max-width:800px;
+  right: 20px;
+  border: thin solid rgba(0, 0, 0, 0.38);
+  border-radius: 5px;
+  padding:10px;
+  background-color: #fff;
+  opacity: .95;
+  z-index: 100;
+  overflow: hidden;
+}
+
+
 .hide-btn{
   float: right;
 }
@@ -81,6 +164,122 @@
   padding-left: 10px;
 }
 
+
+
+#searchResults1-wrapper.closed {
+  min-width: 250px;
+  width: auto;
+  transition: width;
+}
+#searchResults1-wrapper:hover{
+  opacity: 1;
+}
+#searchResults1-wrapper .header {
+  font-size: 16px;
+  font-weight: bold;
+}
+#searchResults1-wrapper .hide-btn {
+  font-size: 14px;
+  font-family: monospace;
+}
+
+#searchResults1-wrapper .reload-btn {
+  font-size: 14px;
+  font-family: monospace;
+}
+
+#searchResults1-wrapper .kill-btn {
+  font-size: 14px;
+  font-family: monospace;
+}
+
+
+
+/* don't waste so much screen space... */
+#searchResults1-wrapper .toc-item{
+  padding-left: 20px;
+}
+
+#searchResults1-wrapper .toc-item .toc-item{
+  padding-left: 10px;
+}
+
+
+#searchResults2-wrapper.closed {
+  min-width: 250px;
+  width: auto;
+  transition: width;
+}
+#searchResults2-wrapper:hover{
+  opacity: 1;
+}
+#searchResults2-wrapper .header {
+  font-size: 16px;
+  font-weight: bold;
+}
+#searchResults2-wrapper .hide-btn {
+  font-size: 14px;
+  font-family: monospace;
+}
+
+#searchResults2-wrapper .reload-btn {
+  font-size: 14px;
+  font-family: monospace;
+}
+
+#searchResults2-wrapper .kill-btn {
+  font-size: 14px;
+  font-family: monospace;
+}
+
+
+
+/* don't waste so much screen space... */
+#searchResults2-wrapper .toc-item{
+  padding-left: 20px;
+}
+
+#searchResults2-wrapper .toc-item .toc-item{
+  padding-left: 10px;
+}
+
+#searchResults3-wrapper.closed {
+  min-width: 250px;
+  width: auto;
+  transition: width;
+}
+#searchResults3-wrapper:hover{
+  opacity: 1;
+}
+#searchResults3-wrapper .header {
+  font-size: 16px;
+  font-weight: bold;
+}
+#searchResults3-wrapper .hide-btn {
+  font-size: 14px;
+  font-family: monospace;
+}
+
+#searchResults3-wrapper .reload-btn {
+  font-size: 14px;
+  font-family: monospace;
+}
+
+#searchResults3-wrapper .kill-btn {
+  font-size: 14px;
+  font-family: monospace;
+}
+
+
+
+/* don't waste so much screen space... */
+#searchResults3-wrapper .toc-item{
+  padding-left: 20px;
+}
+
+#searchResults3-wrapper .toc-item .toc-item{
+  padding-left: 10px;
+}
 
 
 table.table, table.table tr, table.table td, table.table th {
